# SafeAnchor

./: .env.example  .gitignore  README.md  demo.py  environment.yml  evaluate.py  predict.py  pyproject.toml  requirements.txt  setup.cfg  train.py
configs/: config.yaml
configs/experiment/: ablation_study.yaml  table1.yaml  table2.yaml
configs/model/: llama2.yaml  mistral.yaml
configs/training/: debug.yaml  default.yaml  distributed.yaml
src/: __init__.py
src/data/: __init__.py  dataset.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/models/: __init__.py  baselines.py  csm.py  osca.py  safeanchor.py  safety_subspace.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  checkpoint.py  logging.py
tests/: conftest.py  test_data.py  test_evaluation.py  test_model.py  test_training.py
tests/fixtures/: sample_config.yaml  sample_data.json
